--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
@@ -20,7 +21,7 @@
     "prettier-plugin-svelte": "^2.2.0",
     "svelte": "^3.34.0",
     "svelte-preprocess": "^4.0.0",
-    "tailwindcss": "^2.1.2",
+    "tailwindcss": "^2.2.7",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   },
